fixed some typos

--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -39,13 +39,13 @@
     <div id="content">
       <div id="about">
         <p>
-          I am a developer born and raised in Victoria, British Columbia. I graduated in 2014 from the University of Victoria with a Computer Science degree with honours and distinction.
+          I am a developer born and raised in Victoria, British Columbia. I graduated in 2014 from the University of Victoria with a computer science degree with honours and distinction.
         </p>
       </div>
     </div>
 
       <div id="projects">
-        Here are some projects I have worked on! Clearly my "hackathon team" really likes corgis
+        Here are some projects I have worked on! Clearly my "hackathon team" really likes corgis...
         <ul class="projects">
 
           <li class="project rabbitwrath">
@@ -60,7 +60,7 @@
 
             <div class="links">
               <h4>Links:</h4>
-              <a href="/rabbitwrath" target="_blank">Demo</a>
+              <a href="/rabbitwrath" target="_blank">Game</a>
               <a href="https://github.com/toadums/paus" target="_blank"> Source </a>
             </div>
 
@@ -69,7 +69,8 @@
 
           <li class="project corgicards">
             <h3> Corgi Cards </h3>
-            <p>Multiplayer card game made for a game jam. I will get a demo up soon</p>
+            <p>Multiplayer card game made for a game jam hosted by the UVIC Game Development Club. Apparently we felt like we didn't need a rendering engine, so the whole front end is just
+            written in Knockout. I will get a demo up soon.</p>
 
             <div class="collab">
               <h4>Collaborators:</h4>
@@ -87,7 +88,7 @@
           <li class="project hacklandia">
             <h3>Corgi</h3>
             <p>
-              This game was written for a Microsoft sponsored game jam, and needed to use the Kinect. The game got the players to multitask with various parts of their body, and their voice.
+              This game was written for a Microsoft sponsored game jam, and needed to use the Kinect. The game got the players to multitask with various parts of their body and their voice.
               It earned us first place.
             </p>
 
@@ -107,7 +108,7 @@
           <li class="project gravity">
             <h3>Corgi Cosmos</h3>
             <p>
-              This game was made for another Microsoft Hackathon - this time for the Windows Phone 8 platform. The theme was gravity, and the game that we ended up with had an 'angry birds space' sort of feel.
+              This game was made for another Microsoft Hackathon, this time for the Windows Phone 8 platform. The theme was gravity, and the game that we ended up with had an 'angry birds space' sort of feel.
               It also earned us first place.
             </p>
 
