added links to collabs

--- a/client/assets/index.html
+++ b/client/assets/index.html
@@ -55,7 +55,7 @@
 
             <div class="collab">
               <h4>Collaborators:</h4>
-              Griffin Ledingham
+              <a href="https://github.com/GriffinLedingham" target="_blank">Griffin Ledingham</a>
             </div>
 
             <div class="links">
@@ -74,7 +74,7 @@
 
             <div class="collab">
               <h4>Collaborators:</h4>
-              Griffin Ledingham
+              <a href="https://github.com/GriffinLedingham" target="_blank">Griffin Ledingham</a>
             </div>
 
             <div class="links">
@@ -94,7 +94,9 @@
 
             <div class="collab">
               <h4>Collaborators:</h4>
-              Griffin Ledingham, Dan Savage, Cory Binnersley
+              <a href="https://github.com/GriffinLedingham" target="_blank">Griffin Ledingham</a>
+              <a href="https://www.linkedin.com/profile/view?id=123054662" target="_blank">Dan Savage</a>
+              <a href="https://www.linkedin.com/profile/view?id=117210034" target="_blank">Cory Binnersley</a>
             </div>
 
             <div class="links">
@@ -114,7 +116,8 @@
 
             <div class="collab">
               <h4>Collaborators:</h4>
-              Griffin Ledingham, Dan Savage
+              <a href="https://github.com/GriffinLedingham" target="_blank">Griffin Ledingham</a>
+              <a href="https://www.linkedin.com/profile/view?id=123054662" target="_blank">Dan Savage</a>
             </div>
 
             <div class="links">
